@startuml
title Diagramme de classes - Sprint 3 : Quiz, évaluations et correction IA

skinparam backgroundColor #FFFFFF
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam dpi 160

skinparam class {
  BackgroundColor #F8FAFC
  BorderColor #334155
  ArrowColor #334155
  FontColor #0F172A
}

left to right direction

' =========================
' Utilisateur
' =========================
class User {
  + id : int
  + prenom : string
  + nom : string
  + email : string
  + role : string
  --
  + formations()
  + inscriptions()
}

' =========================
' Module de formation
' =========================
class ModuleFormation {
  + id : int
  + formation_id : int
  + titre : string
  + description : text
  + duree : int
  + ordre : int
  --
  + formation()
  + contenus()
  + quiz()
}

' =========================
' Quiz
' =========================
class Quiz {
  + id : int
  + module_id : int
  + titre : string
  + description : text
  + seuil_reussite : int
  + duree_minutes : int
  + nb_tentatives_max : int
  + statut : string
  --
  + module()
  + questions()
  + tentatives()
  + tentativesPour(userId : int)
}

' =========================
' Question
' =========================
class Question {
  + id : int
  + quiz_id : int
  + texte : text
  + type : string
  + points : int
  + ordre : int
  + correction_attendue : text
  --
  + quiz()
  + choix()
}

' =========================
' Choix de réponse
' =========================
class ChoixReponse {
  + id : int
  + question_id : int
  + texte : string
  + est_correct : boolean
  + ordre : int
  --
  + question()
}

' =========================
' Tentative de quiz
' =========================
class TentativeQuiz {
  + id : int
  + quiz_id : int
  + user_id : int
  + score : float
  + score_max : int
  + reussi : boolean
  + duree_secondes : int
  + termine_le : datetime
  --
  + quiz()
  + user()
  + reponses()
}

' =========================
' Réponse apprenant
' =========================
class ReponseApprenant {
  + id : int
  + tentative_id : int
  + question_id : int
  + choix_id : int
  + reponse_texte : text
  + est_correct : boolean
  + score_ia : float
  + feedback_ia : text
  + points_forts : text
  + points_amelioration : text
  + points_obtenus : float
  --
  + tentative()
  + question()
  + choix()
}

' =========================
' Service IA
' =========================
class GlmCorrectionService <<service>> {
  + corrigerReponseLibre(
      question : string,
      reponse : string,
      correctionAttendue : string,
      contexte : string,
      pointsMax : int
    ) : array
}

' =========================
' Relations principales
' =========================
User "1" --> "0..*" TentativeQuiz : passe
ModuleFormation "1" --> "0..1" Quiz : contient

Quiz "1" *-- "1..*" Question : contient
Quiz "1" --> "0..*" TentativeQuiz : reçoit

Question "1" *-- "0..*" ChoixReponse : propose
Question "1" --> "0..*" ReponseApprenant : reçoit

TentativeQuiz "1" *-- "1..*" ReponseApprenant : contient
ReponseApprenant "0..*" --> "0..1" ChoixReponse : choix sélectionné

ReponseApprenant ..> GlmCorrectionService : correction IA\nsi question texte

note right of Question
Types de questions :
- QCM
- Vrai / Faux
- Réponse libre

La réponse libre peut utiliser :
- correction_attendue
- barème
- correction IA
end note

note bottom of ReponseApprenant
Résultat de correction :
- est_correct
- points_obtenus
- score_ia
- feedback_ia
- points_forts
- points_amelioration
end note

note right of GlmCorrectionService
Service utilisé pour corriger
les réponses libres et produire :
- score
- feedback
- points forts
- points à améliorer
end note

@enduml